--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,41 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="container">
+		
+		<div class="page-header text-center">
+			<h1>Frockwit</h1>
+			<em>Connecting lifestyle brands and influencers</em>
+		</div>
+		
+		<div class="row">
+			<nav class="col-xs-2">
+				<ul class="nav nav-pills nav-stacked">
+					<li role="presentation">
+						<a href="#">
+							<span class="glyphicon glyphicon-home"></span>
+							Home
+						</a>
+					</li>
+					<li role="presentation">
+						<a href="#">
+							<span class="glyphicon glyphicon-user"></span>
+							Profile
+						</a>
+					</li>
+					<li role="presentation">
+						<a href="#">
+							<span class="glyphicon glyphicon-envelope"></span>
+							Messages
+						</a>
+					</li>
+				</ul>
+			</nav>
 
-<%= yield %>
-
+			<div class="col-xs-10">
+				<%= yield %>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
